--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <div class="card-body">
                                     <p class="fw-bold">Muhammad Sandy</p>
                                     <p>Jakarta Timur, DK Jakarta</p>
-                                    <a class="btn" href="mailto:muhammadsandy4789@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i> Hubungi Saya</a>
+                                    <a class="btn" href="mailto:muhammadsandy4789@gmail.com"><i class="fa-regular fa-envelope"></i> Hubungi Saya</a>
                                 </div>
                             </div>
                         </div>
