--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                         <p>Social Media</p>
                                     </div>
                                     <div class="card-body d-flex flex-wrap">
-                                        <a href="#" target="_blank" rel="noopener noreferrer">
+                                        <a href="https://www.instagram.com/shandy._san/" target="_blank" rel="noopener noreferrer">
                                             <img src="assets/img/instagram.webp" class="img-fluid" alt="Social Media"><span>Instagram</span>
                                             <p>@shandy._san</p>
                                         </a>
